--- a/home.html
+++ b/home.html
@@ -40,61 +40,46 @@
       
      <Table Border="0">
           <TR>
-          <TD>Age</TD>
-          <TD><Input type="Text" Name="Age" Placeholder="-" Required="Required"></TD>
+          <TD>Hormonal Contraceptives</TD>
+          <TD><Input type="Text" Name="Hormonal Contraceptives" Placeholder="-" Required="Required"></TD>
           </TR>
           <TR>
-          <TD>Number of Sexual Patners</TD>
-          <TD><Input type="Text" Name="Number of Sexual Patners" Placeholder="-" Required="Required"></TD>
-          </TR>
-          <TR>
-          <TD>First Sexual Intercourse</TD>
-          <TD><Input type="Text" Name="First Sexual Intercourse" Placeholder="-" Required="Required"></TD>
-          </TR>
-          <TR>
-          <TD>Smoke(Years)</TD>
-          <TD><Input type="Text" Name="Smoke(Years)" Placeholder="-" Required="Required"></TD>
-          </TR>
-          <TR>
-          <TD>Smokes(Packs/Years)</TD>
-          <TD><Input type="Text" Name="Smokes(Packs/Years)" Placeholder="-" Required="Required"></TD>
-          </TR>
-          <TR>
-          <TD>IUD</TD>
-          <TD><Input type="Text" Name="IUD" Placeholder="-" Required="Required"></TD>
-          </TR>
-          <TR>
-          <TD>IUD(Years)</TD>
-          <TD><Input type="Text" Name="IUD(Years)" Placeholder="-" Required="Required"></TD>
-          </TR>
-          <TR>
-          <TD>STDs</TD>
-          <TD><Input type="Text" Name="STDs" Placeholder="-" Required="Required"></TD>
-          </TR>
-          <TR>
-          <TD>STDs(Number)</TD>
-          <TD><Input type="Text" Name="STDs(Number)" Placeholder="-" Required="Required"></TD>
-          </TR>
-          <TR>
-          <TD>Dx:HPV</TD>
-          <TD><Input type="Text" Name="Dx:HPV" Placeholder="-" Required="Required"></TD>
+          <TD>Hormonal Contraceptives (years)</TD>
+          <TD><Input type="Text" Name="Hormonal Contraceptives (years)" Placeholder="-" Required="Required"></TD>
           </TR>
           <TR>
           <TD>Dx</TD>
           <TD><Input type="Text" Name="Dx" Placeholder="-" Required="Required"></TD>
           </TR>
           <TR>
-          <TD>Hinselmann</TD>
-          <TD><Input type="Text" Name="Hinselmann" Placeholder="-" Required="Required"></TD>
+          <TD>Dx:Cancer</TD>
+          <TD><Input type="Text" Name="Dx:Cancer" Placeholder="-" Required="Required"></TD>
           </TR>
           <TR>
-          <TD>Schiller</TD>
-          <TD><Input type="Text" Name="Schiller" Placeholder="-" Required="Required"></TD>
+          <TD>IUD</TD>
+          <TD><Input type="Text" Name="IUD" Placeholder="-" Required="Required"></TD>
           </TR>
           <TR>
-          <TD>Citology</TD>
-          <TD><Input type="Text" Name="Citology" Placeholder="-" Required="Required"></TD>
+          <TD>Dx:HPV</TD>
+          <TD><Input type="Text" Name="Dx:HPV" Placeholder="-" Required="Required"></TD>
           </TR>
+          <TR>
+          <TD>IUD (years)</TD>
+          <TD><Input type="Text" Name="IUD (years)" Placeholder="-" Required="Required"></TD>
+          </TR>
+          <TR>
+          <TD>Smokes (packs/year)</TD>
+          <TD><Input type="Text" Name="Smokes (packs/year)" Placeholder="-" Required="Required"></TD>
+          </TR>
+          <TR>
+          <TD>STDs:vulvo-perineal condylomatosis</TD>
+          <TD><Input type="Text" Name="STDs:vulvo-perineal condylomatosis" Placeholder="-" Required="Required"></TD>
+          </TR>
+          <TR>
+          <TD>STDs:condylomatosis</TD>
+          <TD><Input type="Text" Name="STDs:condylomatosis" Placeholder="-" Required="Required"></TD>
+          </TR>
+          <TR>
         </Table>
         
         <Button type="Submit" Class="btn">Predict</Button>     
